syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2020 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "BasicTypes.proto";
import "QueryHeader.proto";
import "ResponseHeader.proto";

message TokenGetInfoQuery {
    QueryHeader header = 1;
    TokenRef token = 2;
}

message TokenInfo {
    TokenID tokenId = 1;
    string symbol = 2;
    string name = 3;
    AccountID treasury = 4;
    uint64 currentFloat = 5;
    uint32 divisibility = 6;
    Key adminKey = 7;
    Key kycKey = 8;
    Key freezeKey = 9;
    Key wipeKey = 10;
    Key supplyKey = 11;
    TokenFreezeStatus defaultFreezeStatus = 12;
    TokenKycStatus defaultKycStatus = 13;
    bool isDeleted = 14;
}

message TokenGetInfoResponse {
    ResponseHeader header = 1;
    TokenInfo tokenInfo = 2;
}
